--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint --fix --ext .js,.ts,.tsx ./src --max-warnings=0"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +65,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "postcss-loader": "^8.1.1",
