--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development webpack serve -c webpack.dev.js",
-    "build": "NODE_ENV=production webpack -c webpack.prod.js"
+    "build": "NODE_ENV=production webpack -c webpack.prod.js",
+    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,stylus,html,md}\"",
+    "lint:eslint": "eslint --fix"
   },
   "husky": {
     "hooks": {
