--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "testproject",
+  "name": "web3-evm-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,29 +12,35 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/webpack": "^5.28.5",
+    "@web3-onboard/coinbase": "^2.4.1",
+    "@web3-onboard/metamask": "^2.2.0",
+    "@web3-onboard/okx": "^2.0.0",
+    "@web3-onboard/react": "^2.10.0",
+    "@web3-react/core": "^6.1.9",
     "ajv": "^8.17.1",
+    "bignumber.js": "^9.1.2",
     "copy-webpack-plugin": "^12.0.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
-    "serve-index": "^1.9.1",
+    "redux": "^5.0.1",
+    "serve-index": "1.8.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.15.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development webpack serve -c webpack.dev.js",
     "build": "NODE_ENV=production webpack -c webpack.prod.js",
-    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,stylus,html,md}\"",
-    "lint:eslint": "eslint --fix"
+    "release": "node scripts/release.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "eslint --fix"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -54,16 +62,10 @@
     "cross-env": "^7.0.3",
     "css-loader": "6",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "html-webpack-plugin": "^5.6.3",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.3.3",
     "sass-loader": "^16.0.3",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "3",
