--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web3-evm-template",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@reduxjs/toolkit": "^2.3.0",
@@ -32,8 +31,8 @@
     "web3": "^4.15.0"
   },
   "scripts": {
-    "dev": "NODE_ENV=development webpack serve -c webpack.dev.js",
-    "build": "NODE_ENV=production webpack -c webpack.prod.js",
+    "dev": "NODE_ENV=development webpack serve -c build/webpack.dev.js",
+    "build": "NODE_ENV=production webpack -c build/webpack.prod.js",
     "release": "node scripts/release.js"
   },
   "eslintConfig": {
