--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.2",
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/webpack": "^5.28.5",
     "@web3-onboard/coinbase": "^2.4.1",
     "@web3-onboard/metamask": "^2.2.0",
@@ -17,12 +18,14 @@
     "@web3-onboard/react": "^2.10.0",
     "@web3-react/core": "^6.1.9",
     "ajv": "^8.17.1",
+    "antd": "^5.22.2",
     "bignumber.js": "^9.1.2",
     "copy-webpack-plugin": "^12.0.2",
     "path": "^0.12.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "serve-index": "1.8.0",
