--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
   "scripts": {
     "dev": "NODE_ENV=development webpack serve -c build/webpack.dev.js",
     "build": "NODE_ENV=production webpack -c build/webpack.prod.js",
-    "release": "node scripts/release.js"
+    "release": "node scripts/release.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +72,8 @@
     "css-loader": "6",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "postcss-loader": "^8.1.1",
