--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "release": "node scripts/release.js",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
