--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/webpack": "^5.28.5",
+        "@web3-react/walletlink-connector": "^6.2.14",
+        "@web3-react/injected-connector": "^6.0.7",
         "@web3-onboard/coinbase": "^2.4.1",
         "@web3-onboard/metamask": "^2.2.0",
         "@web3-onboard/okx": "^2.0.0",
