--- a/package.json
+++ b/package.json
@@ -1,99 +1,105 @@
 {
-  "name": "web3-evm-template",
-  "version": "1.0.3",
-  "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
-    "@mui/material": "^6.1.8",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/webpack": "^5.28.5",
-    "@web3-react/walletlink-connector": "^6.2.14",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-onboard/coinbase": "^2.4.1",
-    "@web3-onboard/metamask": "^2.2.0",
-    "@web3-onboard/okx": "^2.0.0",
-    "@web3-onboard/react": "^2.10.0",
-    "@web3-react/core": "^6.1.9",
-    "ajv": "^8.17.1",
-    "antd": "^5.22.2",
-    "bignumber.js": "^9.1.2",
-    "copy-webpack-plugin": "^12.0.2",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "serve-index": "1.8.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "web3": "^4.15.0"
-  },
-  "scripts": {
-    "dev": "NODE_ENV=development webpack serve -c build/webpack.dev.js",
-    "build": "NODE_ENV=production webpack -c build/webpack.prod.js",
-    "release": "node scripts/release.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "name": "web3-evm-template",
+    "version": "1.0.3",
+    "dependencies": {
+        "@ethersproject/providers": "^5.7.2",
+        "@mui/material": "^6.1.8",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/webpack": "^5.28.5",
+        "@web3-onboard/coinbase": "^2.2.7",
+        "@web3-onboard/metamask": "^2.0.7",
+        "@web3-onboard/okx": "^2.0.0",
+        "@web3-onboard/react": "^2.10.0",
+        "@web3-react/core": "^6.1.9",
+        "@web3-react/injected-connector": "^6.0.7",
+        "@web3-react/walletlink-connector": "^6.2.14",
+        "ajv": "^8.17.1",
+        "antd": "^5.22.2",
+        "bignumber.js": "^9.1.2",
+        "copy-dir": "^1.3.0",
+        "copy-webpack-plugin": "^12.0.2",
+        "inquirer": "8.2.5",
+        "path": "^0.12.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.22.1",
+        "react-scripts": "^3.0.1",
+        "redux": "^5.0.1",
+        "serve-index": "^1.9.1",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4",
+        "web3": "^4.15.0",
+        "yargs": "^17.7.2"
+    },
+    "scripts": {
+        "dev": "NODE_ENV=development webpack serve -c build/webpack.dev.js",
+        "build": "NODE_ENV=production webpack -c build/webpack.prod.js",
+        "release": "node scripts/release.js"
+    },
+    "bin": {
+        "create": "bin/create.js"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "src/**/*.{js,jsx,ts,tsx}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/node": "^16.18.119",
+        "add": "^2.0.6",
+        "autoprefixer": "^10.4.20",
+        "compression-webpack-plugin": "^11.1.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "6",
+        "css-minimizer-webpack-plugin": "^7.0.0",
+        "html-webpack-plugin": "^5.6.3",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.2.10",
+        "mini-css-extract-plugin": "^2.9.2",
+        "node-sass": "^9.0.0",
+        "postcss-loader": "^8.1.1",
+        "sass-loader": "^16.0.3",
+        "speed-measure-webpack-plugin": "^1.5.0",
+        "style-loader": "3",
+        "stylus": "^0.64.0",
+        "stylus-loader": "^8.1.1",
+        "terser-webpack-plugin": "^5.3.10",
+        "thread-loader": "^4.0.4",
+        "webpack": "^5.96.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.1.0",
+        "webpack-merge": "^6.0.1",
+        "webpackbar": "^7.0.0"
     }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/node": "^16.18.119",
-    "add": "^2.0.6",
-    "autoprefixer": "^10.4.20",
-    "compression-webpack-plugin": "^11.1.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "6",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "html-webpack-plugin": "^5.6.3",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "mini-css-extract-plugin": "^2.9.2",
-    "node-sass": "^9.0.0",
-    "postcss-loader": "^8.1.1",
-    "sass-loader": "^16.0.3",
-    "speed-measure-webpack-plugin": "^1.5.0",
-    "style-loader": "3",
-    "stylus": "^0.64.0",
-    "stylus-loader": "^8.1.1",
-    "terser-webpack-plugin": "^5.3.10",
-    "thread-loader": "^4.0.4",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "webpack-merge": "^6.0.1",
-    "webpackbar": "^7.0.0"
-  }
 }
